--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,3 +1,9 @@
-<h1>No books yet</h1>
+<% if @books.any? %>
+  <% @books.each do |book| %>
+    <h2> <%= book.title %> </h2>
+  <% end %>
+<% else %>
+  <h1>No books yet</h1>
+<% end %>
 
-<a href="#">Add a book</a>
+<%= link_to "Add a book", new_book_path %>
